--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,10 @@ services:
     depends_on:
       - db
     environment:
-      - MONGO_URI=mongodb://db:27017/your_database_name
+      - MONGO_URI=mongodb://db:27017
+      - MONGO_DB_NAME=your_database_name
       - JWT_SECRET=sl_myJwtSecret
+      - PORT=5000
 
   db:
     image: "mongo:latest"
